--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 	<main>
 		<div class="intro">Tristan Phillips</div>
-		<div class="tagline">Hobbyist web developer</div>
+		<div class="tagline">Computer science enthusiasts</div>
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/Tristan-Phillips">
         <i class="fab fa-github" aria-hidden="true" title="Github"></i>
